# ip-geo

./: .Dockerfile  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_NOTES.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: bootstrap.py  config.py  ioc.py  logging.py  main.py
app/api/: exception_handlers.py  healthcheck.py  openapi.py  schemas.py
app/api/v1/: routes.py
app/application/: use_cases.py
app/common/: client_ip.py  ip.py
app/domain/: entities.py  exceptions.py  interfaces.py
app/infrastructure/: cache.py  circuit_breaker.py  local_geoip.py  providers.py  rate_limit.py  retry.py
tests/: conftest.py
tests/integration/: test_health.py  test_lookup_routes.py
tests/unit/: test_cache.py  test_circuit_breaker.py  test_client_ip.py  test_config.py  test_local_geopip.py  test_providers.py  test_startup_check.py  test_use_case.py  test_utils.py
