[project]
name = "ip-geo"
version = "0.1.0"
description = "FastAPI service for IP geolocation with MaxMind, Redis cache, retry, rate limiting and external providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "dishka>=1.9.1",
    "fastapi>=0.135.1",
    "geoip2>=5.2.0",
    "granian>=2.7.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
    "types-redis>=4.6.0.20241004",
]
test = [
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = ["tests", "test_*.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = "^tests/"

[[tool.mypy.overrides]]
module = [
    "geoip2.*",
    "fakeredis.*",
    "respx.*",
    "dishka.*",
    "pydantic.*",
    "pydantic_settings.*",
    "granian.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.ioc",
    "app.api.healthcheck",
    "app.api.v1.routes",
    "tests"
]
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = ["misc"]
